fix p404 image overflow

--- a/src/app/core/components/page-notfound/page-notfound.component.scss
+++ b/src/app/core/components/page-notfound/page-notfound.component.scss
@@ -46,7 +46,13 @@ body {
         }
     }   
 }
-@media (max-width: 900px) {
+@media (min-width: 900px) and (max-height: 600px){
+    svg{
+        position: static !important;
+        transform: translateX(50%) !important;
+    }
+}
+@media (max-width: 899px) {
     svg {
         position: static !important;
         top: 50%;
